# voice_numpad

./: README.md  execute.bat  keybord_test.py  main.py  pyhooked_test.py  pyproject.toml
